# FYP

./: .clang-format  .cmake-format  .cproject.bak  .mxproject  .project.bak  CMakeLists.txt  EqnStuffs.cpp  FYP.sublime-workspace  FYP_Interim_Report.tex  Forloopattempt.cpp  LICENSE  Makefile  Model.hpp  NUCLEO-F722ZE.xml  NUCLEO_F722ZE_TEST.ioc  Toolchain.cmake
Debug/: NUCLEO_F722ZE_TEST.elf  NUCLEO_F722ZE_TEST.hex  makefile  objects.list  output.map
Debug/Drivers/STM32F7xx_HAL_Driver/Src/: stm32f7xx_hal.d  stm32f7xx_hal_adc.d  stm32f7xx_hal_adc_ex.d  stm32f7xx_hal_cortex.d  stm32f7xx_hal_dma.d  stm32f7xx_hal_dma_ex.d  stm32f7xx_hal_flash.d  stm32f7xx_hal_flash_ex.d  stm32f7xx_hal_gpio.d  stm32f7xx_hal_i2c.d  stm32f7xx_hal_i2c_ex.d  stm32f7xx_hal_pcd.d  stm32f7xx_hal_pcd_ex.d  stm32f7xx_hal_pwr.d  stm32f7xx_hal_pwr_ex.d  stm32f7xx_hal_rcc.d  stm32f7xx_hal_rcc_ex.d  stm32f7xx_hal_tim.d  stm32f7xx_hal_tim_ex.d  stm32f7xx_hal_uart.d  stm32f7xx_ll_usb.d  subdir.mk
Debug/Src/: main.d  stm32f7xx_hal_msp.d  stm32f7xx_it.d  subdir.mk  system_stm32f7xx.d
Debug/startup/: subdir.mk
Inc/: main.h  stm32f7xx_hal_conf.h
Src/: main.c  stm32f7xx_hal_msp.c
src/: main.cpp  main.hpp  main_stm.cpp
src/module/: CMakeLists.txt
src/module/HardwareIO/Joint/LinearAxis/: LinearAxis.cpp  LinearAxis.hpp
src/module/HardwareIO/Joint/OneAxis/: OneAxis.cpp  OneAxis.hpp
src/module/HardwareIO/Joint/TwoAxis/: TwoAxis.cpp  TwoAxis.hpp
src/module/HardwareIO/Muscle/: Muscle.cpp  Muscle.hpp
src/module/HardwareIO/Valve/: Valve.cpp  Valve.hpp
src/module/HardwareIO/ValveFake/: ValveFake.cpp  ValveFake.hpp
src/module/Input/Controller/: Controller.cpp  Controller.hpp
src/module/Joint/OneAxis/: OneAxis.cpp  OneAxis.hpp
src/module/Joint/TwoAxis/: TwoAxis.cpp  TwoAxis.hpp
src/module/LinearPotentiometer/: LinearPotentiometer.cpp  LinearPotentiometer.hpp
src/module/MPC/AdaptiveMPC/: AdaptiveMPC.cpp  AdaptiveMPC.hpp  Optimizer.cpp  Optimizer.hpp
src/module/MPC/Model/: Model.hpp
src/module/Muscle/: Muscle.cpp  Muscle.hpp
src/module/PID/: PID.cpp  PID.hpp
src/module/PressureSensor/: PressureSensor.cpp  PressureSensor.hpp
src/module/SMC/: SMC.cpp  SMC.hpp
src/module/Sensors/LinearPotentiometer/: LinearPotentiometer.cpp  LinearPotentiometer.hpp
src/module/Sensors/PressureSensor/: PressureSensor.cpp  PressureSensor.hpp
src/module/SensorsFake/LinearPotentiometerFake/: LinearPotentiometer.cpp  LinearPotentiometer.hpp
src/module/SensorsFake/PressureSensorFake/: PressureSensor.cpp  PressureSensor.hpp
src/module/Simulator/: Plant.cpp  Plant.hpp
src/module/Valve/: Valve.cpp  Valve.hpp
src/nuclear/: CMakeLists.txt
src/nuclear/src/: clock.hpp
src/nuclear/src/util/: critical_section.hpp
src/shared/: CMakeLists.txt
src/shared/extension/hal/: SFR.hpp
src/shared/utility/ADC/: ADC.cpp  ADC.hpp
src/shared/utility/PID/: PID.cpp  PID.hpp
src/shared/utility/clock/: clock.cpp
src/shared/utility/critical_section/: critical_section.cpp
src/shared/utility/io/: adc.cpp  adc.hpp  gpio.cpp  gpio.hpp  uart.cpp  uart.hpp
src/shared/utility/math/: median.hpp  saturation.hpp
src/shared/utility/model/DynamicModel/: DynamicModel.cpp  DynamicModel.hpp
src/shared/utility/model/StaticModel/: StaticModel.cpp  StaticModel.hpp
src/shared/utility/motion/: ForwardKinematics.hpp  InverseKinematics.cpp  InverseKinematics.hpp
src/shared/utility/simulated_io/: simulated_adc.cpp  simulated_adc.hpp  simulated_uart.cpp  simulated_uart.hpp
src/stm32/: .gitignore  CMakeLists.txt  NUCLEO_F722ZE_TEST.ioc
